# ig-trading

./: .env.example  .gitignore  AGENTS.md  AI_ROADMAP.md  CLAUDE.md  Dockerfile  Dockerfile.dashboard  GEMINI.md  LIVE_PREFLIGHT_CHECKLIST.md  PRE_LAUNCH_CHECKLIST.md  PROJECT_ARCHITECTURE.md  TASK_TRACKER.md  TECH_DEBT_AUDIT.md  docker-compose.yml  eslint.config.mjs  next.config.ts  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts
ig-engine/: .dockerignore  Cargo.toml  Dockerfile  deny.toml
ig-engine/.cargo/: audit.toml
ig-engine/config/: default.toml  live-ramp.toml  live.toml
ig-engine/migrations/: 001_initial.sql
ig-engine/scripts/: fetch_calendar.py
ig-engine/src/: lib.rs  main.rs
ig-engine/src/api/: auth.rs  errors.rs  mock_client.rs  mod.rs  rest_client.rs  streaming_client.rs  traits.rs  types.rs
ig-engine/src/data/: bar_accumulator.rs  candle_store.rs  mod.rs  trade_logger.rs
ig-engine/src/engine/: backtester.rs  config.rs  mod.rs  optimizer.rs  order_manager.rs  state.rs
ig-engine/src/indicators/: adx.rs  atr.rs  bollinger.rs  ema.rs  macd.rs  mod.rs  rsi.rs  sma.rs  stochastic.rs
ig-engine/src/ipc/: events.rs  http_server.rs  mod.rs
ig-engine/src/learning/: adaptive_weights.rs  mod.rs  scorecard.rs
ig-engine/src/notifications/: mod.rs  telegram.rs
ig-engine/src/regime/: mod.rs
ig-engine/src/risk/: mod.rs  position_sizer.rs
ig-engine/src/strategy/: bollinger.rs  ensemble.rs  m15_bollinger_reversion.rs  m15_ema_microtrend.rs  m15_momentum_burst.rs  ma_crossover.rs  macd_momentum.rs  mod.rs  rsi_reversal.rs  (+3 more)
ig-engine/tests/: backtest_api.rs  calendar_test.rs  config_load.rs  min_sizing_test.rs  trade_pipeline.rs
(+97 files in other folders)
